Currency set up and crud done
